# mindspore-model-hub-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  temp.json
data/: mindspore_official_models.json  pytorch_ms_api_mapping_consistent.json  pytorch_ms_api_mapping_diff.json
data/convert/consistent/: torch_consistent.json  torch_distributed_consistent.json  torch_linalg_consistent.json  torch_nn_consistent.json  torch_nn_functional_consistent.json  torch_optim_consistent.json  torch_special_consistent.json  torch_tensor_consistent.json  torch_utils_consistent.json  torchaudio_consistent.json  torchtext_consistent.json  torchvision_consistent.json
data/convert/diff/: torch_diff.json  torch_distributed_diff.json  torch_linalg_diff.json  torch_nn_diff.json  torch_nn_functional_diff.json  torch_optim_diff.json  torch_special_diff.json  torch_tensor_diff.json  torch_utils_diff.json  torchaudio_diff.json  torchtext_diff.json  torchvision_diff.json
scripts/: fetch_api_mapping.py  update_model_list.py
src/: backup_server.py
src/mindspore_mcp/: main.py  prompt.py  resource.py  server.py  tools.py
src/mindspore_tools_mcp/: main.py  resource.py  server.py  tools.py
tests/: test.py
