[project]
name = "mindspore-model-hub-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "mcp[cli]>=1.21.2",
    "requests>=2.32.5",
]

[[tool.uv.index]]
name = "qinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
