[project]
name = "mindspore-tools-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "mcp[cli]>=1.21.2",
    "requests>=2.32.5",
]
authors = [                      
    { name = "whitea133", email = "1309848726@qq.com" },
]

[build-system]  
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindspore_model_hub_mcp"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
